# mobile-agent

./: .gitignore  README.md  config-template.gradle  settings.gradle
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/milestones/v1.6-phases/v16-02-agent-tools/: v16-02-VALIDATION.md
.planning/milestones/v2.3-phases/02-voice-interaction/: 02-CONTEXT.md
.planning/phases/01-build-system-agent-core/: 01-RESEARCH.md  PLAN.md
.planning/phases/01-tools-schema/: 01-CONTEXT.md
.planning/phases/02-rename-modules/: 02-VERIFICATION.md
.planning/phases/03-api-integration/: 03-CONTEXT.md
.planning/phases/03-voice-integration/: 03-01-SUMMARY.md
.planning/phases/04-startup-flow/: 04-CONTEXT.md
.planning/phases/05-api-key/: 05-UAT.md
.planning/phases/v15-01-tools-schema/: v15-01-01-PLAN.md
.planning/phases/v20-01-code-cleanup/: v20-01-UAT.md
.planning/phases/v20-03-code-migration/: v20-03-CONTEXT.md
.planning/quick/1-soul-md-user-md/: 1-SUMMARY.md
agent/: build.gradle
agent-android/: build.gradle
agent-android/src/main/: AndroidManifest.xml
agent-android/src/main/java/com/hh/agent/android/: AgentActivity.java  AndroidToolManager.java
agent-android/src/main/java/com/hh/agent/android/tool/: DisplayNotificationTool.java  ReadClipboardTool.java  SearchContactsTool.java  SendImMessageTool.java  ShowToastTool.java  TakeScreenshotTool.java
agent-core/src/main/cpp/: CMakeLists.txt  native_agent.cpp
agent-core/src/main/cpp/include/icraw/core/: mnn_provider.hpp
agent-core/src/main/cpp/src/: config.cpp  mobile_agent.cpp
agent-core/src/main/cpp/src/core/: agent_loop.cpp  mcp_client.cpp  provider_manager.cpp
agent-core/src/main/cpp/src/tools/: tool_registry.cpp
agent/src/main/cpp/: CMakeLists.txt  native_agent.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.json  config.json.bak  tools.json
app/src/main/java/com/hh/agent/: AndroidToolManager.java  LauncherActivity.java  MainActivity.java  VueActivity.java  WorkspaceManager.java
app/src/main/java/com/hh/agent/app/voice/: MockVoiceRecognizer.java
app/src/main/java/com/hh/agent/presenter/: MainPresenter.java  NativeMobileAgentApiAdapter.java  NativeNanobotApiAdapter.java
app/src/main/java/com/hh/agent/tools/: DisplayNotificationTool.java  ReadClipboardTool.java  SearchContactsTool.java  SendImMessageTool.java  ShowToastTool.java  TakeScreenshotTool.java
app/src/main/res/layout/: activity_launcher.xml
cxxplatform/: CMakeLists.txt
cxxplatform/demo/: CMakeLists.txt  main.cpp
cxxplatform/include/icraw/: config.hpp  mobile_agent.hpp
cxxplatform/include/icraw/core/: agent_loop.hpp  llm_provider.hpp  mnn_provider.hpp  provider_manager.hpp
cxxplatform/src/core/: memory_manager.cpp  mnn_provider.cpp
cxxplatform/src/tools/: tool_registry.cpp
cxxplatform/tests/: mnn_full_tool_test.cpp  mnn_interactive.cpp  mnn_test.cpp  mnn_tool_test.cpp
docs/: README.md  android-tool-extension.md
docs/architecture/: c4-architecture.md  mobile-agent-module-map.md  ocr-native-fusion-architecture.md  web-dom-native-xml-ui-locator-design.md  web-dom-native-xml-ui-locator-presentation.md
vue/: index.html  package-lock.json  package.json  vite.config.ts
vue/src/: App.vue  router.ts  style.css
vue/src/api/: http.ts  nanobot.ts
vue/src/components/: InputBar.vue  MessageBubble.vue  ThinkingIndicator.vue
vue/src/stores/: chat.ts
vue/src/types/: api.ts  message.ts
vue/src/views/: ChatView.vue
